# nonebot-plugin-zssm

./: .pre-commit-config.yaml  README.md  bot.py  pyproject.toml
.github/workflows/: ruff.yml
nonebot_plugin_zssm/: __init__.py  api.py  config.py  constant.py  handle.py  prompt.txt
nonebot_plugin_zssm/browser/: __init__.py  browser.py  installer.py
nonebot_plugin_zssm/processors/: __init__.py  ai.py  image.py  pdf.py  web.py
