[project]
name = "nonebot-plugin-zssm"
version = "0.1.8"
description = "这是什么？问一下！"
authors = [{ name = "djkcyl", email = "cyl@cyllive.cn" }]
dependencies = [
    "nonebot2[fastapi,websockets]",
    "nonebot-plugin-alconna>=0.56.2",
    "httpx>=0.28.1",
    "openai>=1.68.2",
    "playwright>=1.51.0",
    "pillow>=11.1.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "nonebot-adapter-onebot>=2.4.6",
]
